src/objects/Trip_Request__c.object
<CustomObject>
    <fields>
        <fullName>Airfare_Cost__c</fullName>
        <label>Airfare Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Facing__c</fullName>
        <label>Customer Facing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Total_Cost__c</fullName>
        <label>Expected Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Trip Requests</relationshipLabel>
        <relationshipName>Trip_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trip_Description__c</fullName>
        <label>Trip Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trip_End__c</fullName>
        <label>Trip End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trip_Start__c</fullName>
        <label>Trip Start</label>
        <type>DateTime</type>
    </fields>
    <label>Trip Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trip Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>